# notebooks

./: README.md  pyproject.toml
docker/: Dockerfile  README.md  docker-compose.yml  jupyter_lab_config.py  pyproject.toml
pytorch-tutorial/: .gitignore  01_tensor.ipynb  02_gradient.ipynb  02_linear_model.ipynb  03_mnist.ipynb  03_mnist_logistic.ipynb  04_neuralnetwork.ipynb
pytorch-tutorial/.ipynb_checkpoints/: 01_tensor-checkpoint.ipynb  02_gradient-checkpoint.ipynb
