[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["nokomoro3 <snkmr0221@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
tensorflow = "^2.6.0"
scikit-learn = "^1.0"
jupyterlab = "^3.1.14"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
